# cfd-clean-room

./: .gitignore  README.md  claude.md  pyproject.toml  requirements.txt
.github/prompts/: review_system_prompt.md
.github/scripts/: review.py
.github/workflows/: ci.yml  review.yml
configs/: clean_room_default.yaml
docs/: PROJECT_PLAN.md  SYSTEM.md
docs/ADR/: ADR-008-collocated-ghost-cell-walls.md
docs/ECR/: ECR-001-solver-architecture-rebuild.md
docs/reports/: phase1_foundation_report.md
src/: boundary.py  config.py  constants.py  mesh.py  particles.py  solver_ns.py
tests/: test_boundary.py  test_config.py  test_lid_cavity.py  test_mesh.py  test_particles.py  test_poiseuille.py  test_solver_ns.py
