[project]
name = "cfd-clean-room"
version = "0.1.0"
description = "CFD engine for clean room airflow and contamination transport simulation"
requires-python = ">=3.12"

[tool.ruff]
line-length = 88
target-version = "py312"

[tool.ruff.lint]
select = [
    "E",    # pycodestyle errors
    "W",    # pycodestyle warnings
    "F",    # pyflakes
    "I",    # isort
    "N",    # pep8-naming
    "UP",   # pyupgrade
    "B",    # flake8-bugbear
    "SIM",  # flake8-simplify
    "RUF",  # ruff-specific rules
]
ignore = [
    "E501",  # line length handled by formatter
    "N802",  # physics naming in test functions (test_a_P_ur_scaling)
    "N803",  # physics naming in function args (a_P, a_E, etc.)
    "N806",  # physics variable naming (a_P, F_e, D_ew) uses uppercase per convention
]

[tool.ruff.lint.isort]
known-first-party = ["src"]

[tool.ruff.format]
quote-style = "double"

[tool.pytest.ini_options]
testpaths = ["tests"]
markers = [
    "unit: Unit tests -- isolated function and class behavior",
    "integration: Integration tests -- module interaction and data flow",
    "validation: Validation tests -- physics verification against analytical solutions",
]
